Updated game version to 1.1 to fix some minor bugs. Also updated webpage to scale more nicely on smaller monitors. Enabled scrolling on game canvas (hopefully).

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@
 	font-style: normal;
 }
 
+body {
+	min-width: 1200px;
+}
+
 h1, h2 {
 	font-family: "raleway", Helvetica, Arial, sans-serif;
 	color: #444452;
@@ -28,7 +32,8 @@ footer {
 
 .intro_header {
 	height: 100vh;
-	padding: 20vh 20vw;
+	padding: 18vh 18vw;
+	min-height: 750px;
 }
 
 .intro_text {
@@ -100,4 +105,9 @@ footer {
 
 #unity-canvas {
 	display: block;
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	max-width: 1280px;
+	max-height: 896px;
 }
